Added question guessing and answering

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
           </form>
         </section> -->
 
-        <section class="level">
+        <!-- <section class="level">
           <div class="level-player-side">
             <div class="level-player-img">
               <img src="images/dug.jpg" alt="Dug the dog!">
@@ -138,7 +138,7 @@
               <p class="level-opponent-lives">Lives 3/3</p>
               <p class="level-opponent-name">Jenny</p>
           </div>       
-      </section>
+      </section> -->
     </section> 
   </main>
 </body>
