Added opponent class

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,7 @@
             <div class="level-player-img">
               <img src="images/dug.jpg" alt="Dug the dog!">
             </div>       
+            <span class="level-player-life-bar></span>"
             <p class="level-player-lives">Lives 10/10</p>
             <p class="level-player-name">Jon</p>
           </div>
