Found images and added red color for wrong answer

--- a/index.html
+++ b/index.html
@@ -98,6 +98,11 @@
           </div>
         </div>
       </section>
+
+      <section class="play-again">
+        <h2 class="play-again-heading">Game Over!</h2>
+        <p class="play-again-stats"></p>
+      </section>
      </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
