Finished play again HTML

--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
 
       <section class="play-again">
         <h2 class="play-again-heading">Game Over!</h2>
-        <p class="play-again-stats"></p>
+        <p class="play-again-stats">You got 8 out of 20</p>
+        <div class="play-again-img-box">
+          <img src="images/smiley.jpg" alt="A smiley face!" class="play-again-img">
+        </div>
       </section>
      </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
