--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </section>
 
-      <section class="question">
+      <!-- <section class="question">
         <div class="wrapper">
           <div class="question-header">
             <h2 class="question-correct-answers">Correct Answers: 0</h2>
@@ -97,15 +97,15 @@
             <button class="question-next hidden">Next Question</button>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section class="play-again">
+      <!-- <section class="play-again">
         <h2 class="play-again-heading">Game Over!</h2>
         <p class="play-again-stats">You got 8 out of 20</p>
         <div class="play-again-img-box">
           <img src="images/smiley.jpg" alt="A smiley face!" class="play-again-img">
         </div>
-      </section>
+      </section> -->
      </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
