Added play again function and event delegation for setup screen

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             <label class="setup-label" for="setup-name">
               Name
             </label>
-            <input type="text" class="setup-new-name" name="name" id="setup-name">
+            <input type="text" class="setup-name" name="name" id="setup-name">
             
             <label for="setup-number-questions" class="setup-label">
               Choose number of questions!
             </label>
-            <select name="questions" id="setup-number-questions" class="setup-new-question-number">
+            <select name="questions" id="setup-number-questions" class="setup-number-questions">
               <option value="5">5</option>
               <option value="10">10</option>
               <option value="15">15</option>
@@ -74,7 +74,7 @@
               <option value="18">Computers</option>
               <option value="14">Television</option>
             </select>
-            <button>Start Game!</button>
+            <button class="setup-button">Start Game!</button>
           </form>
         </div>
       </section>
