Set up styles folder with prepros

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="styles/style.css" type="text/css">
+  <title>Trivially Yours</title>
   <style>
 
     html{
@@ -84,7 +85,7 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header-heading">Trivia!</h1>
+    <h1 class="header-heading">Trivially Yours</h1>
   </header>
   <main class="game-area">
     <section class="setup-new">
@@ -136,17 +137,17 @@
       <div class="wrapper">
         <div class="question-header">
           <h2 class="question-count">Question 5/20</h2>
-          <h3 class="question-correct-answers">Correct Answers: 0</h3>
+          <h2 class="question-correct-answers">Correct Answers: 0</h2>
           <p>Player: Jon</p>
         </div>
         
         <div class="question-box">
           <h3 class="question-question">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia et voluptatibus molestiae minus rerum eum expedita tempore. Veritatis tempora maxime perspiciatis quia laboriosam odit ab a sed consequuntur expedita. Fuga!</h3>
           <ul class="level-question-answers">
-            <button>Answer A</button>
-            <button>Answer B</button>
-            <button>Answer C</button>
-            <button>Answer D</button>
+            <li><button>Answer A</button></li>  
+            <li><button>Answer A</button></li> 
+            <li><button>Answer A</button></li> 
+            <li><button>Answer A</button></li> 
           </ul>
           <button class="question-next hidden">Next Question</button>
         </div>
