--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Fredoka+One|Luckiest+Guy" rel="stylesheet"> 
   <link rel="stylesheet" href="styles/style.css" type="text/css">
   <title>Trivially Yours</title>
   <style>
 
    
 
-    .header{
-      text-align: center;
-    }
+    
 
     .question-header{
       text-align: center;
