Got rid of scroll on mobile version. 1st round responsive done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
   <main class="game-area">
     <section class="setup">
-      <div class="wrapper">
+      <div class="wrapper setup-wrapper">
           <form action="" class="setup-form">
             <label class="setup-label" for="setup-name">
               Name
