--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             Difficulty
           </label>
           <select name="difficulty" id="setup-difficulty" class="setup-difficulty">
-            <option value="easy">easy</option>
-            <option value="medium">medium</option>
-            <option value="hard">hard</option>
+            <option value="easy">Easy</option>
+            <option value="medium">Medium</option>
+            <option value="hard">Hard</option>
           </select>  
 
           <label for="setup-categories" class="setup-label">
