added styles for 1440p laptop

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <main class="game-area">
     <section class="setup">
-      <div class="wrapper setup-wrapper">
+      <div class="wrapper">
         <form action="" class="setup-form">
           <label class="setup-label" for="setup-name">
             Name
