--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main class="game-area">
       <section class="setup">
-        <div class="wrapper">
+        <div class="wrapper setup__wrapper">
           <form action="" class="setup-form">
             <label class="setup-label" for="setup-name">
               Name
